# veryfi-data

./: README.md  docker-compose.yml  pyproject.toml
api_server/: DOCKERFILE  Dockerfile  api.py  pyproject.toml
pipeline/: DOCKERFILE  Dockerfile  pyproject.toml
pipeline/pipeline/: __init__.py  assets.py
