[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["gjing <georgejing93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dagster = {version = "^1.6.12", python="^3.10,<3.13"}
dagster-webserver = {version = "^1.6.12", python="^3.10,<3.13"}
ijson = "^3.2.3"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
