[tool.poetry]
name = "api_server"
version = "0.1.0"
description = ""
authors = ["gjing <georgejing93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
Flask-PyMongo = "^2.3.0"
ijson = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
